Fix header toggle button on mobile
Make it clickable by adjusting the z-index (the title was obscuring it).  *Now*, hopefully all the header issues are resolved...

--- a/client/styles/base.less
+++ b/client/styles/base.less
@@ -77,9 +77,13 @@ a {
     margin: 0 auto;
     line-height: 50px;
     display: inline-block;
-    max-width: 600px;
+    max-width: 400px;
     white-space: nowrap;
     overflow: visible;
+
+    @media(min-width:768px){
+        max-width: 600px;
+    }
 }
 
 .navbar .nav-center h1,
@@ -96,6 +100,7 @@ a {
     color: #eee;
 }
 
+.navbar-toggle { z-index: 5; }
 .navbar-nav li { z-index: 5; }
 
 /*
